Fix overflow issue

--- a/style.css
+++ b/style.css
@@ -918,7 +918,7 @@ body {
 
   #popup-container {
     padding: 5% 6%;
-    overflow: hidden;
+    overflow-y: auto;
     display: flex;
     justify-content: center;
     align-items: center;
